--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  each issue in issues
+    h2
+      a(href=issue.html_url)= issue.title
