--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta(http-equiv='Content-Type' content='text/html; charset=UTF-8')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
