--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,6 @@ html
     meta(http-equiv='Content-Type' content='text/html; charset=UTF-8')
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    block head
   body
     block content
