--- a/views/post.jade
+++ b/views/post.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block head
+  link(rel='stylesheet', href='/stylesheets/github-markdown.css')
+
 block content
   h1= title
-  p!= md(body)
+  .markdown-body!= md(body)
