--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block head
+  link(rel='stylesheet', href='/stylesheets/index.css')
+
 block content
   h1= title
   each issue in issues
