--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,10 +2,10 @@ h1 {
     text-align: center;
 }
 
-h2 {
-    margin-top: 30px;
+/*h2 {
+    margin-top: 20px;
     margin-bottom: 20px;
-}
+}*/
 
 a {
     text-decoration: none;
