add description meta in index.js

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
+block meta
+  meta(name='description', content=description)
+
 block head
   link(rel='stylesheet', href='/stylesheets/index.css')
 
