--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     meta(http-equiv='Content-Type' content='text/html; charset=UTF-8')
+    block meta
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     block head
