add keywords meta

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html
   head
     meta(http-equiv='Content-Type' content='text/html; charset=UTF-8')
     meta(name='description', content=description)
+    meta(name='keywords', content=keywords)
+    meta(name='author', content='Shuping LIU')
     block meta
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
