--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,9 +5,14 @@ html
     meta(name='description', content=description)
     meta(name='keywords', content=keywords)
     meta(name='author', content='Shuping LIU')
+
     block meta
     title= title
+
+    link(rel='canonical', href=canonical)
     link(rel='stylesheet', href='/stylesheets/style.css')
+
     block head
+
   body
     block content
