add rss icon in index page

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -7,3 +7,10 @@ a:active,
 a:hover {
     outline: 0;
 }
+
+#rss {
+    width: 32px;
+    height: 32px;
+/*    margin-left: 80%;
+    margin-right: 20%;*/
+}
