--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    meta(http-equiv='Content-Type' content='text/html; charset=UTF-8')
+    meta(charset='UTF-8')
     meta(name='description', content=description)
     meta(name='keywords', content=keywords)
     meta(name='author', content='Shuping LIU')
