--- a/views/post.jade
+++ b/views/post.jade
@@ -6,7 +6,7 @@ block head
 
 block content
   h1= title
-  p.post.meta= updated_at
+  p.post.meta= created_on
   div.clear
   .markdown-body!= body
   div.ds-thread(data-thred-key= thread, data-title= title, data-author-key= 'liushuping', data-form-position= 'top')
