--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ block head
 block content
   h1= title
   a(href='/rss.xml')
-    img#rss(src='/stylesheets/rss.png', alt='rss')
+    img#rss(src='/img/rss.png', alt='rss')
 
   each post in posts
     h2
